--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,58 +7,15 @@ html, body {
   height: 100%;
 }
 
-.container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 40px 0;
-}
-
-.content {
-  width: 800px;
-}
-
-.search {
-  width: 400px;
-  height: 30px;
-  margin: 0 auto 30px;
-  display: flex;
-}
-
-.keyword {
-  width: 0;
-  flex-grow: 4;
-  border: 1px solid black;
-  border-radius: none;
-  box-sizing: border-box;
-  padding: 5px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-.tbl-cari {
-  width: 0;
-  flex-grow: 1;
-  background-color: rgb(67, 67, 241);
-  color: white;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  text-transform: capitalize;
-  border: none;
-}
-
 .galeri {
-  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-auto-rows: max-content;
   row-gap: 15px;
+  justify-items: center;
+  align-items: start;
 }
 
 .film {
@@ -222,4 +179,9 @@ right: 0;
 left: 0;
 z-index: 2;
 cursor: pointer;
+}
+
+/* utilities */
+.w-35 {
+  width: 35px;
 }
